4/0_mongodb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-statefulset
spec:
  serviceName: mongodb-service
  replicas: 3
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
        replicaset: MainRepSet
    spec:
      containers:
        - name: mongodb
          image: mongo:4.0.26
          ports:
            - containerPort: 27017
          command:
            - "mongod"
            - "--bind_ip"
            - "0.0.0.0"
            - "--replSet"
            - "MainRepSet"
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  labels:
    app: mongodb
spec:
  clusterIP: None
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongodb
