4/4_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
spec:
  rules:
    - host: mongofront.local
      http:
        paths:
          - backend:
              service:
                name: mongo-express-service
                port:
                  number: 8081
            path: /
            pathType: Prefix
